--- a/requirements_conda.txt
+++ b/requirements_conda.txt
@@ -1,6 +1,6 @@
-python>=3.8,<3.9
-tqdm>=4.31.0,<5.0.0
-numpy>=1.16.3,<2.0.0
-pandas>=0.24.2,<2.0.0
-lightgbm>=2.2.3,<3.0.0
-scikit-learn>=0.20.3,<1.0.0
+py-lief==0.9.0
+tqdm>=4.31.0
+numpy>=1.16.3
+pandas>=0.24.2
+lightgbm>=2.2.3
+scikit-learn>=0.20.3
